1. write remove and sethead method in stub database (#31)
2. set all id to int